# dawm

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deno.json  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: html_serialization.ts  html_traversal_basic.ts
npm/: package.json
rs_lib/: Cargo.toml
rs_lib/src/: interner.rs  lib.rs  quirks_mode.rs  rcdom.rs  wire.rs
scripts/: build.ts  build_npm.ts  bump_version.ts  check_build.ts  download_wasm_opt.ts  patch_wasm_opt.sh  wasm_opt.sh
src/: _internal.ts  collections.ts  dom.ts  global.ts  guards.ts  index.ts  options.ts  parse.ts  select.ts  serialize.ts  tree.ts  types.ts  wasm.ts  wire.ts
src/wasm/: index.d.ts  index.js
