[package]
name = "dawm"
version = "0.1.0-rc.3"
edition = "2024"
license = "MIT"
description = "Universal DOM parser implementation for JavaScript and WebAssembly, powered by Servo's html5ever/xml5ever under the hood."
repository = "https://github.com/nberlette/dawm"
authors = ["Nicholas Berlette <nick@berlette.com>"]
keywords = ["dom", "html", "xml", "parser", "wasm"]
categories = ["web-programming", "parsing", "wasm"]
readme = "README.md"

[lib]
name = "dawm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
html5ever = "0.36.1"
markup5ever = "0.36.1"
xml5ever = { version = "0.36.1", optional = true }
tendril = "0.4"
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
serde_repr = "0.1.20"
wasm-bindgen = "=0.2.106"
js-sys = "=0.3.83"
moos = { version = "0.2", features = ["derive_more"] }
serde-wasm-bindgen = "0.6.5"
derive_more = { version = "2.1", features = [
  "as_ref",
  "constructor",
  "debug",
  "deref",
  "deref_mut",
  "display",
  "error",
  "from",
  "from_str",
  "index",
  "index_mut",
  "into",
  "into_iterator",
  "is_variant",
  "try_into",
  "try_from",
  "try_unwrap",
] }

[features]
default = ["serde", "tree", "xml"]
serde = []
tree = []
xml = ["xml5ever"]
